# fraud-detection

./: .env.example  .gitignore  COMANDOS_DIRECTOS.md  Dockerfile  INICIO_RAPIDO.md  INSTRUCCIONES_SETUP.md  Makefile  README.md  RESUMEN_EJECUTIVO.txt  SOLUCION_FINAL.md  VALIDACION_PORTFOLIO.md  docker-compose.monitoring.yml  fix_environment.sh  install_package.sh  pyproject.toml  requirements.txt  run_dashboard.py  setup.py  setup_project.sh  train_model.sh  validate_project.sh
.github/workflows/: ci-cd.yml
api/: __init__.py  auth.py  main.py
config/: alerts_config.yaml
config/grafana/: alert_rules.yml  dashboard.json  prometheus.yml
configs/: config.yaml  environment.yaml
dashboard/: README_DASHBOARD.md  README_DASHBOARD_EN.md  __init__.py  fraud_detection_dashboard.py
data/processed/train_clean.parquet/: part.0.parquet
data/sql/: analysis_queries.sql
docs/: F0_problem_statement.md  F1_setup.md  F2_architecture.md  F3_eda.md  F4_feature_engineering.md  F5_modeling.md  F6_evaluation.md  F9_closure.md
docs/Analisis de Datos /: Reporte_Ejecutivo_Resultados.md  Reporte_Tecnico_Resultados.md
models/: __init__.py  improved_recall_threshold_model.pkl  threshold_config.json
notebooks/: 01_sql_eda_analysis.ipynb  02_pipeline_etl_clean.ipynb  03_modeling_simple.ipynb  04_improve_recall.ipynb  __init__.py
reports/eda/: sql_eda_results.json  sql_eda_results_complete.json
reports/metrics/: model_metrics.json
scripts/: __init__.py  run_dashboard.py  run_etl_pipeline_demo.py  run_ml_pipeline_demo.py  run_optimize_threshold.py  run_sql_analysis.py  verify_setup_complete.py
src/fraud_detection_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: evaluate.py  predict.py  train_fraud.py
src/monitoring/: __init__.py  alerts.py  drift_detection.py  monitoring_run.py
src/streaming/: batch_simulator.py
src/utils/: config.py  environment.py
tests/: __init__.py  test_api.py  test_data_pipeline.py  test_model_inference.py
